--- a/workflow-templates/octo-organization-ci.yml
+++ b/workflow-templates/octo-organization-ci.yml
@@ -14,4 +14,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Run a one-line script
-        run: echo Hello from Octo Organization
+        run: |
+          echo Hello from Octo Organization
+          echo Yes
